<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="fi.mabrosim.shoppinglist.ui.SettingsActivity"
    tools:showIn="@layout/activity_settings">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <Switch
            android:layout_width="match_parent"
            android:layout_height="?android:attr/listPreferredItemHeight"
            android:gravity="center_vertical"
            android:text="@string/google_cloud"
            android:textAppearance="@android:style/TextAppearance.DeviceDefault.Large"/>

        <TextView
            android:id="@+id/settings_show_export_bpb"
            android:layout_width="match_parent"
            android:layout_height="?android:attr/listPreferredItemHeight"
            android:gravity="center_vertical"
            android:text="@string/debug_show_exported_data"
            android:textAppearance="@android:style/TextAppearance.DeviceDefault.Large"/>

        <TextView
            android:id="@+id/settings_show_export_bpb_csv"
            android:layout_width="match_parent"
            android:layout_height="?android:attr/listPreferredItemHeight"
            android:gravity="center_vertical"
            android:text="@string/debug_show_exported_data_csv"
            android:textAppearance="@android:style/TextAppearance.DeviceDefault.Large"/>

        <TextView
            android:id="@+id/settings_show_export_json"
            android:layout_width="match_parent"
            android:layout_height="?android:attr/listPreferredItemHeight"
            android:gravity="center_vertical"
            android:text="@string/debug_show_exported_data_json"
            android:textAppearance="@android:style/TextAppearance.DeviceDefault.Large"/>

        <TextView
            android:id="@+id/settings_export_to_csv"
            android:layout_width="match_parent"
            android:layout_height="?android:attr/listPreferredItemHeight"
            android:gravity="center_vertical"
            android:text="@string/debug_export_to_csv"
            android:textAppearance="@android:style/TextAppearance.DeviceDefault.Large"/>

        <TextView
            android:id="@+id/settings_export_to_json"
            android:layout_width="match_parent"
            android:layout_height="?android:attr/listPreferredItemHeight"
            android:gravity="center_vertical"
            android:text="@string/debug_export_to_json"
            android:textAppearance="@android:style/TextAppearance.DeviceDefault.Large"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="?android:attr/listPreferredItemHeight"
            android:gravity="center_vertical"
            android:onClick="deleteAllFromDb"
            android:text="@string/debug_delete_all_from_db"
            android:textAppearance="@android:style/TextAppearance.DeviceDefault.Large"/>

    </LinearLayout>
</ScrollView>
