<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="320dp"
              android:layout_height="wrap_content"
              android:orientation="vertical"
              android:overScrollMode="never"
              android:padding="5dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            style="@style/EditTexTitleStyle"
            android:text="@string/name"
            />

        <LinearLayout
            style="@style/TextLineLayoutStyle">

            <EditText
                android:id="@+id/editName"
                style="@style/EditTextStyle"/>

            <ImageButton
                android:id="@+id/button1"
                style="@style/EditButtonStyle"/>

        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            style="@style/EditTexTitleStyle"
            android:text="@string/quantity"
            />

        <LinearLayout
            style="@style/TextLineLayoutStyle">

            <EditText
                android:id="@+id/editQuantity"
                style="@style/EditTextStyle"/>

            <ImageButton
                android:id="@+id/button2"
                style="@style/EditButtonStyle"/>

        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            style="@style/EditTexTitleStyle"
            android:text="@string/label"
            />

        <LinearLayout
            style="@style/TextLineLayoutStyle">

            <EditText
                android:id="@+id/editLabelName"
                style="@style/EditTextStyle"/>

            <ImageButton
                android:id="@+id/button3"
                style="@style/EditButtonStyle"/>

        </LinearLayout>
    </LinearLayout>

    <include layout="@layout/button_bar_ok_cancel"/>

</LinearLayout>

